Service.yml
apiVersion: v1
kind: Service
metadata:
  name: wcg-svc
spec:
  type: ClusterIP
  selector:
    app: wcg
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
