Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wcg.local
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: wcg-svc
            port:
              number: 8888
